--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>testv</title>
+    <link rel="stylesheet" href="static/desktop-style.min.css"/>
+    <script src="static/lib/sfs2x-api-1.7.6.js"></script>
+    <script src="static/lib/ZiggyClient.js"></script>
+    <script>
+      var trace = console.log;
+    </script>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="rpsapp"></div>
     <!-- built files will be auto injected -->
   </body>
 </html>
