initial version for play.io integration

--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="utf-8">
     <title>testv</title>
     <link rel="stylesheet" href="static/desktop-style.min.css"/>
-    <script src="static/lib/sfs2x-api-1.7.6.js"></script>
-    <script src="static/lib/ZiggyClient.js"></script>
+    <!--<script src="static/lib/sfs2x-api-1.7.6.js"></script>-->
+    <!--<script src="static/lib/ZiggyClient.js"></script>-->
     <script>
       var trace = console.log;
     </script>
